--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@motionone/react": "^10.16.4",
     "@tanstack/react-query": "5.69.0",
     "lucide-react": "0.484.0",
     "next": "15.2.4",
