--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@motionone/react": "^10.16.4",
     "@tanstack/react-query": "5.69.0",
     "lucide-react": "0.484.0",
+    "motion": "^12.23.12",
     "next": "15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0"
